[package]
name = "elevate"
version = "0.1.0"
authors = ["warren <me@warrenhu.com>"]
edition = "2018"

[dependencies]
winit = "0.18.0"
env_logger = "0.6.0"
log = "0.4.6"
gfx-hal = "0.1.0"
gfx-backend-vulkan = "0.1.0"
nalgebra = "0.16.13"
lazy_static = "1.2.0"

[build-dependencies]
shaderc = "0.3.12"
